assignment2/parser/parser.output
Nonterminals useless in grammar

    stmt


Terminals unused in grammar

    "do"
    "else"
    "for"
    "if"
    "let"
    "print"
    "then"


Rules useless in grammar

   60 stmt: "begin" functions "end"
   61     | "for" expr "do" stmt
   62     | "if" expr "then" stmt
   63     | "if" expr "then" stmt "else" stmt
   64     | "let" T_identifier '=' expr
   65     | "print" expr


Rules useless in parser due to conflicts

   52 expr: T_integer
   54     | '(' expr ')'
   55     | expr '+' expr
   56     | expr '-' expr
   57     | expr '*' expr
   58     | expr '/' expr


State 24 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 33 conflicts: 15 reduce/reduce
State 36 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 55 conflicts: 2 shift/reduce
State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 3 shift/reduce
State 59 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 15 reduce/reduce
State 67 conflicts: 3 shift/reduce
State 68 conflicts: 3 shift/reduce, 11 reduce/reduce
State 69 conflicts: 3 shift/reduce, 11 reduce/reduce
State 70 conflicts: 3 shift/reduce, 15 reduce/reduce
State 71 conflicts: 1 shift/reduce
State 72 conflicts: 3 shift/reduce, 15 reduce/reduce
State 73 conflicts: 3 shift/reduce
State 74 conflicts: 9 shift/reduce
State 75 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 78 conflicts: 9 shift/reduce
State 79 conflicts: 9 shift/reduce
State 86 conflicts: 9 shift/reduce
State 87 conflicts: 9 shift/reduce
State 88 conflicts: 9 shift/reduce
State 90 conflicts: 9 shift/reduce
State 91 conflicts: 2 shift/reduce
State 94 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: functions

    2 functions: ε
    3          | functions function

    4 function: clauses '.'

    5 clauses: clauses ';' clause
    6        | clause

    7 clause: T_atom pat_args cl_body

    8 cl_body: '-' '>' exprs

    9 pat_args: '(' patterns ')'
   10         | '(' ')'

   11 patterns: patterns ',' pat_expr
   12         | pat_expr

   13 pat_expr: "var" '=' expr
   14         | "var"
   15         | T_integer
   16         | T_atom
   17         | T_string
   18         | binary

   19 exprs: exprs ',' expr
   20      | expr

   21 expr: expr '=' expr
   22     | expr '+' expr
   23     | expr '-' expr
   24     | expr '*' expr
   25     | expr '/' expr
   26     | expr "div" expr
   27     | ε
   28     | expr '=' '=' expr
   29     | expr '/' '=' expr
   30     | expr '=' '<' expr
   31     | expr '<' expr
   32     | expr '=' '>' expr
   33     | expr '>' expr
   34     | "var"
   35     | T_integer
   36     | T_atom
   37     | T_string
   38     | binary
   39     | "case" expr "of" case_cls "end"
   40     | "begin" exprs "end"
   41     | '(' expr ')'

   42 case_cls: case_cls ';' case_cl
   43         | case_cl

   44 case_cl: expr cl_body

   45 binary: '<' '<' segments '>' '>'
   46       | '<' '<' '>' '>'

   47 segments: segments ',' segment
   48         | segment

   49 segment: "var"
   50        | T_integer
   51        | T_string

   52 expr: T_integer
   53     | T_identifier
   54     | '(' expr ')'
   55     | expr '+' expr
   56     | expr '-' expr
   57     | expr '*' expr
   58     | expr '/' expr
   59     | expr '%' expr


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 59
    '(' (40) 9 10 41 54
    ')' (41) 9 10 41 54
    '*' (42) 24 57
    '+' (43) 22 55
    ',' (44) 11 19 47
    '-' (45) 8 23 56
    '.' (46) 4
    '/' (47) 25 29 58
    ';' (59) 5 42
    '<' (60) 30 31 45 46
    '=' (61) 13 21 28 29 30 32
    '>' (62) 8 32 33 45 46
    error (256)
    "begin" (258) 40
    "case" (259) 39
    "do" (260)
    "else" (261)
    "end" (262) 39 40
    "for" (263)
    "if" (264)
    "let" (265)
    "of" (266) 39
    "print" (267)
    "then" (268)
    "var" (269) 13 14 34 49
    "div" (270) 26
    T_identifier (271) 53
    T_integer (272) 15 35 50 52
    T_atom (273) 7 16 36
    T_string (274) 17 37 51


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program (34)
        on left: 1
        on right: 0
    functions (35)
        on left: 2 3
        on right: 1 3
    function (36)
        on left: 4
        on right: 3
    clauses (37)
        on left: 5 6
        on right: 4 5
    clause (38)
        on left: 7
        on right: 5 6
    cl_body (39)
        on left: 8
        on right: 7 44
    pat_args (40)
        on left: 9 10
        on right: 7
    patterns (41)
        on left: 11 12
        on right: 9 11
    pat_expr (42)
        on left: 13 14 15 16 17 18
        on right: 11 12
    exprs (43)
        on left: 19 20
        on right: 8 19 40
    expr (44)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 52 53 54 55 56 57 58 59
        on right: 13 19 20 21 22 23 24 25 26 28 29 30 31 32 33 39 41 44 54 55 56 57 58 59
    case_cls (45)
        on left: 42 43
        on right: 39 42
    case_cl (46)
        on left: 44
        on right: 42 43
    binary (47)
        on left: 45 46
        on right: 18 38
    segments (48)
        on left: 47 48
        on right: 45 47
    segment (49)
        on left: 49 50 51
        on right: 47 48


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (functions)

    program    go to state 1
    functions  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: functions •
    3 functions: functions • function

    T_atom  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function  go to state 5
    clauses   go to state 6
    clause    go to state 7


State 3

    0 $accept: program $end •

    $default  accept


State 4

    7 clause: T_atom • pat_args cl_body

    '('  shift, and go to state 8

    pat_args  go to state 9


State 5

    3 functions: functions function •

    $default  reduce using rule 3 (functions)


State 6

    4 function: clauses • '.'
    5 clauses: clauses • ';' clause

    '.'  shift, and go to state 10
    ';'  shift, and go to state 11


State 7

    6 clauses: clause •

    $default  reduce using rule 6 (clauses)


State 8

    9 pat_args: '(' • patterns ')'
   10         | '(' • ')'

    "var"      shift, and go to state 12
    T_integer  shift, and go to state 13
    T_atom     shift, and go to state 14
    T_string   shift, and go to state 15
    ')'        shift, and go to state 16
    '<'        shift, and go to state 17

    patterns  go to state 18
    pat_expr  go to state 19
    binary    go to state 20


State 9

    7 clause: T_atom pat_args • cl_body

    '-'  shift, and go to state 21

    cl_body  go to state 22


State 10

    4 function: clauses '.' •

    $default  reduce using rule 4 (function)


State 11

    5 clauses: clauses ';' • clause

    T_atom  shift, and go to state 4

    clause  go to state 23


State 12

   13 pat_expr: "var" • '=' expr
   14         | "var" •

    '='  shift, and go to state 24

    $default  reduce using rule 14 (pat_expr)


State 13

   15 pat_expr: T_integer •

    $default  reduce using rule 15 (pat_expr)


State 14

   16 pat_expr: T_atom •

    $default  reduce using rule 16 (pat_expr)


State 15

   17 pat_expr: T_string •

    $default  reduce using rule 17 (pat_expr)


State 16

   10 pat_args: '(' ')' •

    $default  reduce using rule 10 (pat_args)


State 17

   45 binary: '<' • '<' segments '>' '>'
   46       | '<' • '<' '>' '>'

    '<'  shift, and go to state 25


State 18

    9 pat_args: '(' patterns • ')'
   11 patterns: patterns • ',' pat_expr

    ')'  shift, and go to state 26
    ','  shift, and go to state 27


State 19

   12 patterns: pat_expr •

    $default  reduce using rule 12 (patterns)


State 20

   18 pat_expr: binary •

    $default  reduce using rule 18 (pat_expr)


State 21

    8 cl_body: '-' • '>' exprs

    '>'  shift, and go to state 28


State 22

    7 clause: T_atom pat_args cl_body •

    $default  reduce using rule 7 (clause)


State 23

    5 clauses: clauses ';' clause •

    $default  reduce using rule 5 (clauses)


State 24

   13 pat_expr: "var" '=' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 37
    binary  go to state 38


State 25

   45 binary: '<' '<' • segments '>' '>'
   46       | '<' '<' • '>' '>'

    "var"      shift, and go to state 39
    T_integer  shift, and go to state 40
    T_string   shift, and go to state 41
    '>'        shift, and go to state 42

    segments  go to state 43
    segment   go to state 44


State 26

    9 pat_args: '(' patterns ')' •

    $default  reduce using rule 9 (pat_args)


State 27

   11 patterns: patterns ',' • pat_expr

    "var"      shift, and go to state 12
    T_integer  shift, and go to state 13
    T_atom     shift, and go to state 14
    T_string   shift, and go to state 15
    '<'        shift, and go to state 17

    pat_expr  go to state 45
    binary    go to state 20


State 28

    8 cl_body: '-' '>' • exprs

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    exprs   go to state 46
    expr    go to state 47
    binary  go to state 38


State 29

   40 expr: "begin" • exprs "end"

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    exprs   go to state 48
    expr    go to state 47
    binary  go to state 38


State 30

   39 expr: "case" • expr "of" case_cls "end"

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 49
    binary  go to state 38


State 31

   34 expr: "var" •

    $default  reduce using rule 34 (expr)


State 32

   53 expr: T_identifier •

    $default  reduce using rule 53 (expr)


State 33

   35 expr: T_integer •
   52     | T_integer •

    "end"     reduce using rule 35 (expr)
    "end"     [reduce using rule 52 (expr)]
    "of"      reduce using rule 35 (expr)
    "of"      [reduce using rule 52 (expr)]
    "div"     reduce using rule 35 (expr)
    "div"     [reduce using rule 52 (expr)]
    '+'       reduce using rule 35 (expr)
    '+'       [reduce using rule 52 (expr)]
    '-'       reduce using rule 35 (expr)
    '-'       [reduce using rule 52 (expr)]
    '*'       reduce using rule 35 (expr)
    '*'       [reduce using rule 52 (expr)]
    '/'       reduce using rule 35 (expr)
    '/'       [reduce using rule 52 (expr)]
    '%'       reduce using rule 35 (expr)
    '%'       [reduce using rule 52 (expr)]
    '.'       reduce using rule 35 (expr)
    '.'       [reduce using rule 52 (expr)]
    ';'       reduce using rule 35 (expr)
    ';'       [reduce using rule 52 (expr)]
    '>'       reduce using rule 35 (expr)
    '>'       [reduce using rule 52 (expr)]
    ')'       reduce using rule 35 (expr)
    ')'       [reduce using rule 52 (expr)]
    ','       reduce using rule 35 (expr)
    ','       [reduce using rule 52 (expr)]
    '='       reduce using rule 35 (expr)
    '='       [reduce using rule 52 (expr)]
    '<'       reduce using rule 35 (expr)
    '<'       [reduce using rule 52 (expr)]
    $default  reduce using rule 35 (expr)


State 34

   36 expr: T_atom •

    $default  reduce using rule 36 (expr)


State 35

   37 expr: T_string •

    $default  reduce using rule 37 (expr)


State 36

   41 expr: '(' • expr ')'
   54     | '(' • expr ')'

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 50
    binary  go to state 38


State 37

   13 pat_expr: "var" '=' expr •
   21 expr: expr • '=' expr
   22     | expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | expr • "div" expr
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   55     | expr • '+' expr
   56     | expr • '-' expr
   57     | expr • '*' expr
   58     | expr • '/' expr
   59     | expr • '%' expr

    "div"  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55
    '%'    shift, and go to state 56
    '>'    shift, and go to state 57
    '='    shift, and go to state 58
    '<'    shift, and go to state 59

    $default  reduce using rule 13 (pat_expr)


State 38

   38 expr: binary •

    $default  reduce using rule 38 (expr)


State 39

   49 segment: "var" •

    $default  reduce using rule 49 (segment)


State 40

   50 segment: T_integer •

    $default  reduce using rule 50 (segment)


State 41

   51 segment: T_string •

    $default  reduce using rule 51 (segment)


State 42

   46 binary: '<' '<' '>' • '>'

    '>'  shift, and go to state 60


State 43

   45 binary: '<' '<' segments • '>' '>'
   47 segments: segments • ',' segment

    '>'  shift, and go to state 61
    ','  shift, and go to state 62


State 44

   48 segments: segment •

    $default  reduce using rule 48 (segments)


State 45

   11 patterns: patterns ',' pat_expr •

    $default  reduce using rule 11 (patterns)


State 46

    8 cl_body: '-' '>' exprs •
   19 exprs: exprs • ',' expr

    ','  shift, and go to state 63

    $default  reduce using rule 8 (cl_body)


State 47

   20 exprs: expr •
   21 expr: expr • '=' expr
   22     | expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | expr • "div" expr
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   55     | expr • '+' expr
   56     | expr • '-' expr
   57     | expr • '*' expr
   58     | expr • '/' expr
   59     | expr • '%' expr

    "div"  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55
    '%'    shift, and go to state 56
    '>'    shift, and go to state 57
    '='    shift, and go to state 58
    '<'    shift, and go to state 59

    $default  reduce using rule 20 (exprs)


State 48

   19 exprs: exprs • ',' expr
   40 expr: "begin" exprs • "end"

    "end"  shift, and go to state 64
    ','    shift, and go to state 63


State 49

   21 expr: expr • '=' expr
   22     | expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | expr • "div" expr
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   39     | "case" expr • "of" case_cls "end"
   55     | expr • '+' expr
   56     | expr • '-' expr
   57     | expr • '*' expr
   58     | expr • '/' expr
   59     | expr • '%' expr

    "of"   shift, and go to state 65
    "div"  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55
    '%'    shift, and go to state 56
    '>'    shift, and go to state 57
    '='    shift, and go to state 58
    '<'    shift, and go to state 59


State 50

   21 expr: expr • '=' expr
   22     | expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | expr • "div" expr
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   41     | '(' expr • ')'
   54     | '(' expr • ')'
   55     | expr • '+' expr
   56     | expr • '-' expr
   57     | expr • '*' expr
   58     | expr • '/' expr
   59     | expr • '%' expr

    "div"  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55
    '%'    shift, and go to state 56
    '>'    shift, and go to state 57
    ')'    shift, and go to state 66
    '='    shift, and go to state 58
    '<'    shift, and go to state 59


State 51

   26 expr: expr "div" • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 67
    binary  go to state 38


State 52

   22 expr: expr '+' • expr
   55     | expr '+' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 68
    binary  go to state 38


State 53

   23 expr: expr '-' • expr
   56     | expr '-' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 69
    binary  go to state 38


State 54

   24 expr: expr '*' • expr
   57     | expr '*' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 70
    binary  go to state 38


State 55

   25 expr: expr '/' • expr
   29     | expr '/' • '=' expr
   58     | expr '/' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '='           shift, and go to state 71
    '<'           shift, and go to state 17

    '='       [reduce using rule 27 (expr)]
    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 72
    binary  go to state 38


State 56

   59 expr: expr '%' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 73
    binary  go to state 38


State 57

   33 expr: expr '>' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 74
    binary  go to state 38


State 58

   21 expr: expr '=' • expr
   28     | expr '=' • '=' expr
   30     | expr '=' • '<' expr
   32     | expr '=' • '>' expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '>'           shift, and go to state 75
    '('           shift, and go to state 36
    '='           shift, and go to state 76
    '<'           shift, and go to state 77

    '>'       [reduce using rule 27 (expr)]
    '='       [reduce using rule 27 (expr)]
    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 78
    binary  go to state 38


State 59

   31 expr: expr '<' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 79
    binary  go to state 38


State 60

   46 binary: '<' '<' '>' '>' •

    $default  reduce using rule 46 (binary)


State 61

   45 binary: '<' '<' segments '>' • '>'

    '>'  shift, and go to state 80


State 62

   47 segments: segments ',' • segment

    "var"      shift, and go to state 39
    T_integer  shift, and go to state 40
    T_string   shift, and go to state 41

    segment  go to state 81


State 63

   19 exprs: exprs ',' • expr

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr    go to state 82
    binary  go to state 38


State 64

   40 expr: "begin" exprs "end" •

    $default  reduce using rule 40 (expr)


State 65

   39 expr: "case" expr "of" • case_cls "end"

    "begin"       shift, and go to state 29
    "case"        shift, and go to state 30
    "var"         shift, and go to state 31
    T_identifier  shift, and go to state 32
    T_integer     shift, and go to state 33
    T_atom        shift, and go to state 34
    T_string      shift, and go to state 35
    '('           shift, and go to state 36
    '<'           shift, and go to state 17

    '<'       [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)

    expr      go to state 83
    case_cls  go to state 84
    case_cl   go to state 85
    binary    go to state 38


State 66

   41 expr: '(' expr ')' •
   54     | '(' expr ')' •

    "end"     reduce using rule 41 (expr)
    "end"     [reduce using rule 54 (expr)]
    "of"      reduce using rule 41 (expr)
    "of"      [reduce using rule 54 (expr)]
    "div"     reduce using rule 41 (expr)
    "div"     [reduce using rule 54 (expr)]
    '+'       reduce using rule 41 (expr)
    '+'       [reduce using rule 54 (expr)]
    '-'       reduce using rule 41 (expr)
    '-'       [reduce using rule 54 (expr)]
    '*'       reduce using rule 41 (expr)
    '*'       [reduce using rule 54 (expr)]
    '/'       reduce using rule 41 (expr)
    '/'       [reduce using rule 54 (expr)]
    '%'       reduce using rule 41 (expr)
    '%'       [reduce using rule 54 (expr)]
    '.'       reduce using rule 41 (expr)
    '.'       [reduce using rule 54 (expr)]
    ';'       reduce using rule 41 (expr)
    ';'       [reduce using rule 54 (expr)]
    '>'       reduce using rule 41 (expr)
    '>'       [reduce using rule 54 (expr)]
    ')'       reduce using rule 41 (expr)
    ')'       [reduce using rule 54 (expr)]
    ','       reduce using rule 41 (expr)
    ','       [reduce using rule 54 (expr)]
    '='       reduce using rule 41 (expr)
    '='       [reduce using rule 54 (expr)]
    '<'       reduce using rule 41 (expr)
    '<'       [reduce using rule 54 (expr)]
    $default  reduce using rule 41 (expr)


State 67

   21 expr: expr • '=' expr
   22     | expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | expr • "div" expr
   26     | expr "div" expr •
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   55     | expr • '+' expr
   56     | expr • '-' expr
   57     | expr • '*' expr
   58     | expr • '/' expr
   59     | expr • '%' expr

    '>'  shift, and go to state 57
    '='  shift, and go to state 58
    '<'  shift, and go to state 59

    '>'       [reduce using rule 26 (expr)]
    '='       [reduce using rule 26 (expr)]
    '<'       [reduce using rule 26 (expr)]
    $default  reduce using rule 26 (expr)


State 68

   21 expr: expr • '=' expr
   22     | expr • '+' expr
   22     | expr '+' expr •
   23     | expr • '-' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | expr • "div" expr
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   55     | expr • '+' expr
   55     | expr '+' expr •
   56     | expr • '-' expr
   57     | expr • '*' expr
   58     | expr • '/' expr
   59     | expr • '%' expr

    "div"  shift, and go to state 51
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55
    '%'    shift, and go to state 56
    '>'    shift, and go to state 57
    '='    shift, and go to state 58
    '<'    shift, and go to state 59

    "end"     reduce using rule 22 (expr)
    "end"     [reduce using rule 55 (expr)]
    "of"      reduce using rule 22 (expr)
    "of"      [reduce using rule 55 (expr)]
    '+'       reduce using rule 22 (expr)
    '+'       [reduce using rule 55 (expr)]
    '-'       reduce using rule 22 (expr)
    '-'       [reduce using rule 55 (expr)]
    '.'       reduce using rule 22 (expr)
    '.'       [reduce using rule 55 (expr)]
    ';'       reduce using rule 22 (expr)
    ';'       [reduce using rule 55 (expr)]
    '>'       [reduce using rule 22 (expr)]
    '>'       [reduce using rule 55 (expr)]
    ')'       reduce using rule 22 (expr)
    ')'       [reduce using rule 55 (expr)]
    ','       reduce using rule 22 (expr)
    ','       [reduce using rule 55 (expr)]
    '='       [reduce using rule 22 (expr)]
    '='       [reduce using rule 55 (expr)]
    '<'       [reduce using rule 22 (expr)]
    '<'       [reduce using rule 55 (expr)]
    $default  reduce using rule 22 (expr)


State 69

   21 expr: expr • '=' expr
   22     | expr • '+' expr
   23     | expr • '-' expr
   23     | expr '-' expr •
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | expr • "div" expr
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   55     | expr • '+' expr
   56     | expr • '-' expr
   56     | expr '-' expr •
   57     | expr • '*' expr
   58     | expr • '/' expr
   59     | expr • '%' expr

    "div"  shift, and go to state 51
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55
    '%'    shift, and go to state 56
    '>'    shift, and go to state 57
    '='    shift, and go to state 58
    '<'    shift, and go to state 59

    "end"     reduce using rule 23 (expr)
    "end"     [reduce using rule 56 (expr)]
    "of"      reduce using rule 23 (expr)
    "of"      [reduce using rule 56 (expr)]
    '+'       reduce using rule 23 (expr)
    '+'       [reduce using rule 56 (expr)]
    '-'       reduce using rule 23 (expr)
    '-'       [reduce using rule 56 (expr)]
    '.'       reduce using rule 23 (expr)
    '.'       [reduce using rule 56 (expr)]
    ';'       reduce using rule 23 (expr)
    ';'       [reduce using rule 56 (expr)]
    '>'       [reduce using rule 23 (expr)]
    '>'       [reduce using rule 56 (expr)]
    ')'       reduce using rule 23 (expr)
    ')'       [reduce using rule 56 (expr)]
    ','       reduce using rule 23 (expr)
    ','       [reduce using rule 56 (expr)]
    '='       [reduce using rule 23 (expr)]
    '='       [reduce using rule 56 (expr)]
    '<'       [reduce using rule 23 (expr)]
    '<'       [reduce using rule 56 (expr)]
    $default  reduce using rule 23 (expr)


State 70

   21 expr: expr • '=' expr
   22     | expr • '+' expr
   23     | expr • '-' expr
   24     | expr • '*' expr
   24     | expr '*' expr •
   25     | expr • '/' expr
   26     | expr • "div" expr
   28     | expr • '=' '=' expr
   29     | expr • '/' '=' expr
   30     | expr • '=' '<' expr
   31     | expr • '<' expr
   32     | expr • '=' '>' expr
   33     | expr • '>' expr
   55     | expr • '+' expr
   56     | expr • '-' expr
   57     | expr • '*' expr
   57     | expr '*' expr •
   58     | expr • '/' expr
   59     | expr • '%' expr

    '>'  shift, and go to state 57
    '='  shift, and go to state 58
    '<'  shift, and go to state 59
